<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:text="What is Anxiety?"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#215081"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="0dp"
            android:text="@string/info"
            android:textColor="#057366"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="0dp"
            android:text="Do you have these symptoms?"
            android:textAlignment="center"
            android:textColor="#215081"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="168dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/heartrate" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="5dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/perspiration" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="275dp"
            android:layout_marginEnd="5dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/hotflushes" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="275dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/toilet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="179dp"
            android:layout_marginEnd="139dp"
            android:text="@string/heart"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="121dp"
            android:layout_marginTop="223dp"
            android:layout_marginEnd="94dp"
            android:text="@string/pers"
            android:textAlignment="textEnd"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="121dp"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="96dp"
            android:text="@string/flushes"
            android:textAlignment="textEnd"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="130dp"
            android:text="@string/toilet"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="386dp"
            android:text="What are Panic Attacks?"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#215081"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="0dp"
            android:text="@string/info2"
            android:textColor="#057366"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="530dp"
            android:layout_marginEnd="0dp"
            android:text="Do you have these symptoms?"
            android:textAlignment="center"
            android:textColor="#215081"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="570dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/palpitations" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="5dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/trembling" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="680dp"
            android:layout_marginEnd="5dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/shortnessofbreath" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="680dp"
            android:background="#86208c8c"
            android:cropToPadding="false"
            android:src="@drawable/dizziness" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="790dp"
            android:layout_marginEnd="5dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/fear" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="790dp"
            android:background="#ffffff"
            android:cropToPadding="false"
            android:src="@drawable/nausea" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="139dp"
            android:text="@string/Palpitations"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="624dp"
            android:layout_marginEnd="91dp"
            android:text="@string/Trembling"
            android:textAlignment="textEnd"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="737dp"
            android:layout_marginEnd="91dp"
            android:text="@string/Shortnessofbreath"
            android:textAlignment="textEnd"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="792dp"
            android:layout_marginEnd="97dp"
            android:text="@string/Nausea"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="682dp"
            android:layout_marginEnd="102dp"
            android:text="@string/Dizziness"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="104dp"
            android:layout_marginTop="842dp"
            android:layout_marginEnd="91dp"
            android:text="@string/Fear"
            android:textAlignment="textEnd"
            android:textColor="#057366"
            android:textSize="11dp"
            android:textStyle="bold" />







    </RelativeLayout>

</ScrollView>