<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        android:text="Steps to carry out"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#215081"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/breathing"
        android:layout_width="176dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="39dp"
        android:background="#ffffff"
        android:cropToPadding="false"
        android:src="@drawable/breathing" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="0dp"
        android:text="Breathe In and Out"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="183dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="186dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:text="@string/breathinginandout"
        android:textColor="#057366"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/rules"
        android:layout_width="176dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="170dp"
        android:background="#51ccb0"
        android:cropToPadding="false"
        android:src="@drawable/rules" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="0dp"
        android:text="Follow the 3-3-3 Rule"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="199dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="0dp"
        android:text="@string/threerule"
        android:textColor="#057366"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/walking2"
        android:layout_width="176dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="300dp"
        android:background="#844f08"
        android:cropToPadding="false"
        android:src="@drawable/walking2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="0dp"
        android:text="Take a walk"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="199dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="0dp"
        android:text="@string/takeawalk"
        android:textColor="#057366"
        android:textSize="14dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/error"
        android:layout_width="176dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="427dp"
        android:background="#a7c3ca"
        android:cropToPadding="false"
        android:src="@drawable/error" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="431dp"
        android:layout_marginEnd="0dp"
        android:text="Move away from Hazard"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="0dp"
        android:text="@string/moveaway"
        android:textColor="#057366"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/caffeine"
        android:layout_width="176dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="557dp"
        android:background="#ffffff"
        android:cropToPadding="false"
        android:src="@drawable/caffeine" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="0dp"
        android:text="Remove any caffeine from your diet"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="0dp"
        android:text="@string/drink"
        android:textColor="#057366"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/meditate"
        android:layout_width="176dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="685dp"
        android:background="#ffffff"
        android:cropToPadding="false"
        android:src="@drawable/meditate" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="692dp"
        android:layout_marginEnd="4dp"
        android:text="Meditate"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="199dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="719dp"
        android:layout_marginEnd="0dp"
        android:text="@string/meditate"
        android:textColor="#057366"
        android:textSize="14dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/pro"
        android:layout_width="176dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="810dp"
        android:background="#7cd2ec"
        android:cropToPadding="false"
        android:src="@drawable/pro" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="813dp"
        android:layout_marginEnd="0dp"
        android:text="Seek professional help"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="841dp"
        android:layout_marginEnd="0dp"
        android:text="@string/professional"
        android:textColor="#057366"
        android:textSize="14dp"
        android:textStyle="bold" />


</RelativeLayout>

</ScrollView>